# fastapi-restaurant

./: .env.example  .env.testing  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
app/: database.py  helpers.py  main.py  security.py
app/config/: database.py
app/models/: user.py
app/repositories/: user_repository.py
app/routers/: auth.py
app/schemas/: response_schema.py  user_schema.py
app/services/: user_service.py
migrations/: env.py
migrations/versions/: ad33693e8cfd_add_users_table.py
tests/: conftest.py  factories.py  main_test.py  security_test.py
tests/repositories/: user_repository_test.py
tests/routers/: auth_test.py
tests/services/: user_service_test.py
