[tool.poetry]
name = "fastapi_restaurant"
version = "0.1.0"
description = "A retaurant api build with python fastapi"
authors = ["Alisson Freire <alissonfreire2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
